@@ -1,4 +1,4 @@
 DIST renattach-1.2.4.tar.gz 112566 RMD160 1377b0f689711b7dae04b573c5049cfa5adecd66 SHA1 0ecba3e2f3259971e69cd5da581f9653104f9d6d SHA256 05b6a7dfde17165a35cdb60a7909899bc8060cbc3468f06ce31745e285153155
-EBUILD renattach-1.2.4.ebuild 701 RMD160 10b0748358f136132bb4852be8d9243310dfe2f1 SHA1 e4c82c943d7a3bda12257e165f7884e8678a3883 SHA256 ea31f3a4fb77d1a5ff9d93a6db1395b8352ad3bf0817c159c7a9815b8ed95aa7
-MISC ChangeLog 241 RMD160 b57a2e2e32f72b819196e4ccaef64a1688ebb65e SHA1 3a398554ecda06cbadb7190cc44ed38844eefedc SHA256 9debc6ae7e24a1af9afc6fb1f71ba00346adeef4bb44b72f907c7d7fbf7dc0e8
+EBUILD renattach-1.2.4.ebuild 598 RMD160 9108f3184d1aecd8974be4050bffea307dcb2d84 SHA1 34521b809646c463ff87c362cc60034d895187c5 SHA256 d27d304ef90cf6c914ffbd1c7223b9b2bda9c369d7a0cf870f059b0ed6ba8c2a
+MISC ChangeLog 312 RMD160 9b0fb63d6511ad93a4cb3831b5e00436e50dbb6b SHA1 db835e01c4b5447d660557317be925582ac81eed SHA256 ad246f6bd5a5777e13322905dbacb581a650891f8b18962e6c52c4d23f09ea22
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
