@@ -1,8 +1,9 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/renattach/renattach-1.2.2.ebuild,v 1.3 2009/09/23 19:11:58 patrick Exp $
+# $Header: $
 
 EAPI="2"
+
 inherit eutils
 
 DESCRIPTION="Filter that renames/deletes dangerous email attachments."
@@ -12,6 +13,7 @@ HOMEPAGE="http://www.pc-tools.net/unix/renattach/"
 DEPEND=""
 RDEPEND="${DEPEND}"
 SLOT="0"
+
 LICENSE="GPL-2"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
@@ -19,6 +21,5 @@ IUSE=""
 src_install () {
 	emake DESTDIR="${D}" install || die "install error"
 	mv "${D}"/etc/renattach.conf.ex "${D}"/etc/renattach.conf || die
-
 	dodoc AUTHORS ChangeLog README INSTALL NEWS
 }
