@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/renattach
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Apr 2010; <slep@gentoo.org> renattach-1.2.4.ebuild:
+  syntax fix
 
   29 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +renattach-1.2.4.ebuild, +metadata.xml:
